Made links white as well.

--- a/styleEnScripts/css/responsee.css
+++ b/styleEnScripts/css/responsee.css
@@ -31,7 +31,7 @@ h5 {font-size:1em;}
 h6 {font-size:0.9em;}    
 a, a:link, a:visited, a:hover, a:active {
 	text-decoration:none;
-  color:#444;
+  color:#fff;
 	}
 img {
   border:0;
